  - BREAKING: New methods and minor cleanup to admin themes (may introduce some breakage)
  - BREAKING: Remove the {cms_jquery} plugin and the cms_get_jquery function in lib/misc.functions.php
    - Users using {cms_jquery} in frontend templates will need to find alternate solutions
    - See {cms_queue_script} and {cms_render_scripts}
  - FEATURE: Adds {cms_queue_script} and {cms_render_scripts} plugins to allow combining javascript files and rendering them in fewer requests.
  - FEATURE: new Core::ProcessScript and Core::PostProcessScripts hooks
  - FEATURE: Adds {cms_queue_css} and {cms_render_css} plugins to allow combining stylesheet files and rendering them in fewer requests and database queries.
  - FEATURE: new Core::PreProcessCSSFile and Core::PostProcessCSS hooks
  - FEATURE: new Core::OnCacheClear hook when CMSMS clears the cache
  - BREAKING: Upgrade the embedded jquery and jquery-ui scripts.
    - some admin side javascript that relies on very old jquery may need changing
  - FEATURE: When using {cms_render_scripts} adds the ability to put inline javascript into <script type="text/cms_javascript">...</script>
    - javascript in these tags will be deferred loaded.
  - CHANGE: Fix lib/nls files so that UTF-8 locales are searched first.
  - FEATURE: cms_admin_utils::get_icon() and {admin_icon} can now find icons without specifying an extension.
  - SECURITY: checksum verification can no longer fish for files outside of the root directory.
  - CHANGE: Performance Improvement to contentoperations::SetDefaultContent()
  - IMPROVE: Improve input checking to cms_ipmatches.
  - FEATURE: Adds the cmsfile: smarty resource which is similar to the file resource but more restrictive
     (templates must exist BELOW one of the allowed template directories).  This resource also supports the ;top ;head and ;body
     suffixes to allow parsing a subset of the template.
  - FEATURE: The cmsfile: resource is now the default resource (instead of file:)