@@ -83,12 +83,12 @@ try {
             if (isset($params['addt_editors']) && is_array($params['addt_editors']) && count($params['addt_editors'])) {
                 $tpl_obj->set_additional_editors($params['addt_editors']);
             }
-            if (isset($params['category_id'])) $tpl_obj->set_category($params['category_id']);
+            if (isset($params['category_id'])) (int) $tpl_obj->set_category($params['category_id']);
             $tpl_obj->set_listable(isset($params['listable'])?$params['listable']:1);
             if( isset($params['contents']) ) $tpl_obj->set_content($params['contents']);
 
             $old_export_name = $tpl_obj->get_content_filename();
-            $tpl_obj->set_name($params['name']);
+            $tpl_obj->set_name(cleanValue(strip_tags($params['name'])));
             $new_export_name = $tpl_obj->get_content_filename();
             if( $old_export_name != $new_export_name && is_file( $old_export_name ) ) {
                 if( is_file( $new_export_name ) ) throw new \Exception('Cannot rename exported template (destination name exists)');
